Closed Bug 1580187 Opened 6 years ago Closed 6 years ago

Crash in [@ nsImapService::NewChannel]

Categories

(MailNews Core :: Networking: IMAP, defect)

x86
Windows 10
defect
Not set
critical

Tracking

(thunderbird_esr6869+ fixed, thunderbird70 fixed, thunderbird71 fixed)

RESOLVED FIXED
Thunderbird 71.0
Tracking Status
thunderbird_esr68 69+ fixed
thunderbird70 --- fixed
thunderbird71 --- fixed

People

(Reporter: wsmwk, Assigned: jorgk-bmo)

References

Details

(4 keywords)

Crash Data

Attachments

(1 file, 1 obsolete file)

#14 crash for Thunderbird 68.0. Signature does not appear in any prior betas or nightlies. Assuming regression.

This bug is for crash report bp-eeab81a4-093a-4e61-8924-278ee0190910.

Top 10 frames of crashing thread:

0 xul.dll nsImapService::NewChannel comm/mailnews/imap/src/nsImapService.cpp:2549
1 xul.dll mozilla::net::nsIOService::NewChannelFromURIWithProxyFlagsInternal netwerk/base/nsIOService.cpp:959
2 xul.dll mozilla::net::nsIOService::NewChannelFromURIWithProxyFlagsInternal netwerk/base/nsIOService.cpp:931
3 xul.dll mozilla::net::nsIOService::NewChannelFromURIWithClientAndController netwerk/base/nsIOService.cpp:871
4 xul.dll NS_NewChannelInternal netwerk/base/nsNetUtil.cpp:368
5 xul.dll NS_NewChannelWithTriggeringPrincipal netwerk/base/nsNetUtil.cpp:429
6 xul.dll static nsresult NewImageChannel image/imgLoader.cpp:813
7 xul.dll imgLoader::LoadImage image/imgLoader.cpp:2208
8 xul.dll nsContentUtils::LoadImage dom/base/nsContentUtils.cpp:3321
9 xul.dll mozilla::dom::Document::MaybePreLoadImage dom/base/Document.cpp:8680

Strange, imapRoot is checked above, so why not here? And why didn't it crash before?

Attachment #9091734 - Flags: review?(benc)
Attachment #9091734 - Flags: review?(mkmelin+mozilla)
Comment on attachment 9091734 [details] [diff] [review] 1580187-dont-crash-NewChannel.patch Review of attachment 9091734 [details] [diff] [review]: ----------------------------------------------------------------- ::: mailnews/imap/src/nsImapService.cpp @@ +2550,5 @@ > + rv = imapRoot->FindOnlineSubFolder(fullFolderName, > + getter_AddRefs(subFolder)); > + aFolder = do_QueryInterface(subFolder); > + if (aFolder) aFolder->GetParent(getter_AddRefs(parent)); > + } Maybe better to add the if (imapRoot) to the outer if clause? Otherwise there is a potential mix of what fullFolderName and parent refer to, I think.
Attachment #9091734 - Flags: review?(mkmelin+mozilla)
Attachment #9091734 - Flags: review?(benc)
Attachment #9091734 - Flags: review+

Yes, good catch, you're right, simpler this way.

Assignee: nobody → jorgk
Attachment #9091734 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #9092600 - Flags: review+
Target Milestone: --- → Thunderbird 71.0

Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/ef6aa355a702
Add null check to avoid crash in nsImapService::NewChannel(). r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Attachment #9092600 - Flags: approval-comm-esr68?
Attachment #9092600 - Flags: approval-comm-beta+

quite odd - absolutely no crashes in nightly nor beta prior to 68.0 - https://crash-stats.mozilla.org/signature/?release_channel=%21release&signature=nsImapService%3A%3ANewChannel&date=%3E%3D2019-03-13T08%3A57%3A00.000Z&date=%3C2019-09-13T08%3A57%3A00.000Z

perhaps caused by a recent uplift to 68.0 that also somehow didn't cause problems earlier?

Attachment #9092600 - Flags: approval-comm-esr68? → approval-comm-esr68+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: