Bug 1580187 - Add null check to avoid crash in nsImapService::NewChannel(). r=mkmelin